# chip8

./: CMakeLists.txt  README.md  main.c
gfx/: shader.c  shader.h
shaders/: shader.fs  shader.vs
src/: chip8.c  chip8.h
